--- a/video.html
+++ b/video.html
@@ -19,7 +19,7 @@
 
         .container {
             display: flex;
-            flex-direction: column; /* 手機螢幕上的布局是上到下 */
+            flex-direction: column; /* 手機螢幕上的佈局是上到下 */
             align-items: center; /* 水平居中 */
             justify-content: center; /* 垂直居中 */
             height: 100vh; /* n% 視窗高度 */
@@ -29,7 +29,7 @@
         /* @media 都是電腦排版 */
         @media only screen and (min-width: 768px) {
             .container {
-                flex-direction: row; /* 電腦螢幕上的布局是左到右 */
+                flex-direction: row; /* 電腦螢幕上的佈局是左到右 */
                 flex-flow: wrap;
                 width: auto;
                 height: 85.85vh;
@@ -64,8 +64,7 @@
             width: 34px;
             height: 46px;
             margin: 0.1em;
-            border-top: 1%;
-            padding: 5px;
+            padding: 2px;
             }
         }
 
